RESOLVED FIXED121057
There should be one "invalid" virtual register constant
https://bugs.webkit.org/show_bug.cgi?id=121057
Summary There should be one "invalid" virtual register constant
Michael Saboff
Reported 2013-09-09 16:04:36 PDT
This is in preparation for inverting the JSC stack. Currently a virtual register value of -1 is used as an invalid virtual register. When the stack is inverted, -1 will be a valid register. Some places in the code use a literal -1 while others use the enum InvalidVirtualRegister. All places should use the InvalidVirtualRegister enum and its value should be a reasonable "invalid" value.
Attachments
Patch (6.89 KB, patch)
2013-09-09 16:21 PDT, Michael Saboff
fpizlo: review+
Michael Saboff
Comment 1 2013-09-09 16:21:05 PDT
Michael Saboff
Comment 2 2013-09-09 23:08:44 PDT
Note You need to log in before you can comment on or make changes to this bug.